test/programs/invalid/interpreter/GetClassInstanceUndefinedProperty.lox
class ApiServer {
    init() {
        this.routes = nil;
    }
}

var server = ApiServer();

print server.routes;
print server.hello;
